--- a/vue-seemago/LearnCase/case-cheermall/src/assets/css/base.css
+++ b/vue-seemago/LearnCase/case-cheermall/src/assets/css/base.css
@@ -47,6 +47,17 @@ a {
   zoom: 1;
 }
 
+.arrow-right {
+  border-top: 1px solid #999;
+  border-left: 1px solid #999;
+  width: 9px;
+  height: 9px;
+  background-color: transparent;
+  transform: rotate(135deg);
+  display: inline-block;
+  margin-left: .1rem;
+}
+
 .left {
   float: left;
 }
